--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.8)
 
 project(finch CXX)
 
+set (CMAKE_CXX_STANDARD 11)
+
 include_directories ("${PROJECT_SOURCE_DIR}/src")
 include_directories ("${PROJECT_SOURCE_DIR}/src/Base")
 include_directories ("${PROJECT_SOURCE_DIR}/src/Syntax")
